# jackal-bindings

./: README.md
artifacts/: checksums.txt  checksums_intermediate.txt  filetree.wasm  storage_template.wasm
contracts/filetree/: Cargo.toml
contracts/filetree/src/: contract.rs  error.rs  lib.rs  msg.rs
contracts/template/: Cargo.toml
contracts/template/src/: contract.rs  error.rs  lib.rs  msg.rs
